2006-06-23  Mark D. Baushke  <mdb@gnu.org>

	* glob.c (collated_compare): Update from gnulib.
	* stdint_.h: Both BSD/OS 4.2 and SGI-cc IRIX 5.3 seem to also need
	<sys/types.h> included.
	* base64.c (B64): Fork from gnulib for IBM C V6 AIX. For reasons
	unclear, traditional CPP rather than C89 semantics are used in
	macro substitution inside of a string.

2006-06-22  Mark D. Baushke  <mdb@gnu.org>

	* glob.c (collated_compare): Fork from gnulib. Patch from Larry Jones.
	* stdint_.h: Fork from gnulib. Based on tests with SGI.
	* getaddrinfo.c, openat.c, socket_.h: Update from gnulib.

2006-06-22  Jim Hyslop <jhyslop@dreampossible.ca>

	* libcvs.dsp: removed strto?max.c (moved to Windows-specific
	files in ../windows-NT)
	* libcvs.dep, libcvs.mak: regenerated for libcvs.dsp changes
	* strtoimax.c: backed out change introduced on June 11, since it
	can potentially break things

2006-06-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.gnulib, alloca_.h, getdate.y, size_max.h, stdint_.h,
	strtol.c, unsetenv.c: Update from gnulib.
	* Makefile.am: Update based on Makefile.gnulib changes.
	* Makefile.in, getdate.c: Regenerated.
	
2006-06-14  Jim Hyslop <jhyslop@dreampossible.ca>

	* libcvs.dsp: Removed canonicalize.c, will use Windows-specific
	version in ../windows-NT/
	* libcvs.mak, libcvs.dep: regenerated for libcvs.dsp changes

2006-06-11  Jim Hyslop <jhyslop@dreampossible.ca>

	* libcvs.dsp: added new files to the lib
	* libcvs.mak, libcvs.dep: regenerated for "libcvs.dsp" changes
	* strtoimax.c: Changed size comparison from == to >=, to allow
	this to compile under Microsoft Visual Studio.

2006-06-05  Mark D. Baushke  <mdb@gnu.org>

	* regexec.c: Update from gnulib.

2006-06-04  Mark D. Baushke  <mdb@gnu.org>

	* getpass.c, printf-args.c, tempname.c: Update from gnulib.

2006-05-22  Mark D. Baushke  <mdb@gnu.org>

	* nanosleep.c: Update from gnulib.

2006-05-19  Mark D. Baushke  <mdb@gnu.org>

	* stdint_.h: Update from gnulib.
